recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:5: error: not found: value squareSide
	squareSide(levels-1,length*0.4)
        ^PentaKoch:7: error: not found: value squareSide
	squareSide(levels-1,length*0.4)
        ^PentaKoch:9: error: not found: value squareSide
	squareSide(levels-1,length*0.4)
        ^PentaKoch:11: error: not found: value squareSide
	squareSide(levels-1,length*0.4)
        ^PentaKoch:13: error: not found: value squareSide
	squareSide(levels-1,length*0.4)
        ^