recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
	if(levels==0){
	avance(length)
	}else{
	squareSide(levels-1,length*0.4)
	gauche(90)
	squareSide(levels-1,length*0.4)
	droite(90)
	squareSide(levels-1,length*0.4)
	droite(90)
	squareSide(levels-1,length*0.4)
	gauche(90)
	squareSide(levels-1,length*0.4)
	}
}
